--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-easy-swipe": "0.0.22",
