--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
-    "mongoose": "^6.2.0"
-    
+    "mongoose": "^6.2.0",
+    "multer": "^1.4.4"
   }
 }
